objects/LAT_Contract__c.object
<CustomObject>
    <description>New LAT Object for Contracts</description>
    <fields>
        <fullName>A_casa_ja_inaugurou__c</fullName>
        <label>A casa já inaugurou?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Absolut_100_periodo__c</fullName>
        <formula>Volume_absolut_100__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Absolut 100 contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Absolut_Elyx_periodo__c</fullName>
        <formula>Volume_Absolut_Elyx__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Absolut Elyx contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Absolut_Flavors_periodo__c</fullName>
        <formula>Volume_Absolut_Flavors__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Absolut Flavors contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Absolut_Vodka_periodo__c</fullName>
        <formula>Volume_Absolut_Vodka__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Absolut Vodka contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LAT_Contracts</relationshipLabel>
        <relationshipName>LAT_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActivatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LAT_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActivatedDate__c</fullName>
        <label>Activated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Aditamento_ass_cliente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aditamento ass. cliente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aditamento_encaminhado_ao_cliente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aditamento encaminhado ao cliente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aditamento_entregue_ao_cliente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aditamento entregue ao cliente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aditamento_gerado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aditamento gerado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aditamento_registrado_regional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aditamento registrado regional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agencia__c</fullName>
        <label>Agência</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agencia_do_Cliente__c</fullName>
        <formula>Account__r.Agency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agência do Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alerta__c</fullName>
        <formula>IF(  AND(ISPICKVAL(Tipo_de_contrato__c , &quot;Acordo&quot;) ,   Valor_do_contrato__c  &gt; 10000 ) , IMAGE(&quot;https://c.cs3.content.force.com/servlet/servlet.ImageServer?id=015Q00000001OaO&amp;oid=00DQ0000000EAzg&amp;lastMod=1337622727000&quot;, &quot;Valor superior a 10.000,00&quot;)  , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alerta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alteracao_de_clausulas_contratuais__c</fullName>
        <label>Alteração de cláusulas contratuais</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aprovado_pelo_cliente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aprovado pelo cliente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Armarios_de_Clube_da_Vodka__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>% Produtos Pernod</inlineHelpText>
        <label>Armários de Clube da Vodka</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Armarios_de_Clube_de_Whisky__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>% Produtos Pernod.</inlineHelpText>
        <label>Armários de Clube de Whisky</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ass_cliente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ass. cliente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ass_diretoria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ass. diretoria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ass_gerente_procurador__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ass. gerente (procurador)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assinatura_coordenador__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ass. coordenador</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assinatura_procurador_regional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ass. procurador regional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ativacao_Comentario__c</fullName>
        <label>Ativação - Comentário</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ativacao__c</fullName>
        <label>Ativação</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bairro_Cobranca__c</fullName>
        <formula>Account__r.Revenue_Neighbourhood__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bairro Faturamento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ballantines_12Y_periodo__c</fullName>
        <formula>Volume_Ballantine_s_12Y__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ballantine&apos;s 12Y contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ballantines_17Y_periodo__c</fullName>
        <formula>Volume_Ballantine_s_17Y__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ballantine&apos;s 17Y contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ballantines_21Y_periodo__c</fullName>
        <formula>Volume_Ballantine_s_21Y__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ballantine&apos;s 21Y contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ballantines_Finest_periodo__c</fullName>
        <formula>Volume_Ballantine_s_Finest__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ballantine&apos;s Finest contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Banco__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Banco</label>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>LAT_Contract</relationshipLabel>
        <relationshipName>LAT_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Banco_do_Cliente__c</fullName>
        <formula>Account__r.Bank__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banco do Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_de_c_lculo__c</fullName>
        <label>Base de cálculo</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_de_calculo__c</fullName>
        <label>Base de cálculo</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BillingAddress__c</fullName>
        <label>Billing Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCity__c</fullName>
        <label>BillingCity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCountry__c</fullName>
        <label>BillingCountry</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingPostalCode__c</fullName>
        <label>BillingPostalCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingState__c</fullName>
        <label>BillingState</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStreet__c</fullName>
        <label>BillingStreet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CEP_Cobranca__c</fullName>
        <formula>Account__r.Revenue_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CEP Faturamento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNPJ_Conta__c</fullName>
        <formula>Account__r.CNPJ__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNPJ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPF_do_Signatario__c</fullName>
        <formula>CustomerSigned__r.CPF__c</formula>
        <label>CPF do Signatário</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Corrente_do_Cliente__c</fullName>
        <formula>Account__r.Checking_account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>C.Corrente do Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cabine_de_DJ__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>peça(s)</inlineHelpText>
        <label>Cabine de DJ</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cachaca_Janeiro__c</fullName>
        <label>Cachaça - Janeiro</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cachaca_Janeiro_periodo__c</fullName>
        <formula>Volume_Cachaca_Janeiro__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cachaça Janeiro contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cachaca_Sao_Francisco_periodo__c</fullName>
        <formula>Volume_Cachaca_Sao_Francisco__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cachaça Sao Francisco contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculo_de_data__c</fullName>
        <formula>EndDate__c</formula>
        <label>Cálculo de data</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancelado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cardapio_Comentario__c</fullName>
        <label>Cardápio - Comentário</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cardapio__c</fullName>
        <label>Cardápio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Champagne_Mumm_Cordon_Rouge__c</fullName>
        <label>Champagne - Mumm Cordon Rouge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Champagne_Perrier_Jouet_Belle_Epoque__c</fullName>
        <label>Champagne - Perrier Jouet Belle Epoque</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Champagne_Perrier_Jouet_Grand_Brut__c</fullName>
        <label>Champagne - Perrier Jouet Grand Brut</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chivas_Regal_12_Years_periodo__c</fullName>
        <formula>Volume_Chivas_Regal_12_Years__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chivas Regal 12 Years contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chivas_Regal_18_Years_periodo__c</fullName>
        <formula>Volume_Chivas_Regal_18_Years__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chivas Regal 18 Years contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chivas_Regal_25_Years_periodo__c</fullName>
        <formula>Volume_Chivas_Regal_25_Years__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chivas Regal 25 Years contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cidade_Cobranca2__c</fullName>
        <formula>Account__r.Revenue_City__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cidade Faturamento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cl_usulas_do_Contrato__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cláusulas do Contrato</label>
        <referenceTo>Cl_usulas_do_Contrato__c</referenceTo>
        <relationshipLabel>LAT_Contract</relationshipLabel>
        <relationshipName>LAT_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clausulas_padrao_PRB__c</fullName>
        <label>Cláusulas padrão PRB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                    <default>true</default>
                    <label>Sim</label>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_inadimplente__c</fullName>
        <formula>IF( Account__r.Overdue__c ,&quot;Sim&quot;,&quot;Não&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cliente inadimplente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cognac_Martell__c</fullName>
        <label>Cognac - Martell</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comentario_Valor_Minimo_de_Caixa__c</fullName>
        <label>Comentário</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comentario__c</fullName>
        <label>Comentário</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CompanySignedDate__c</fullName>
        <label>Company Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CompanySigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Signed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CompanySigned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comunica_o_Comentario__c</fullName>
        <label>Comunicação - Comentário</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comunicacao__c</fullName>
        <inlineHelpText>Ex: Websites, Flyers, Revistas, etc</inlineHelpText>
        <label>Comunicação</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conferido_por_adit_enc_cliente__c</fullName>
        <label>Conferido por</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conferido_por_adit_entregue_ao_cliente__c</fullName>
        <label>Conferido por</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conferido_por_aditamento_gerado__c</fullName>
        <label>Conferido por</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conferido_por_aditamento_registrado__c</fullName>
        <label>Conferido por</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conferido_por_adt_ass_cliente__c</fullName>
        <label>Conferido por</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conferido_por_apro_cli__c</fullName>
        <label>Conferido por</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conferido_por_ass_cliente__c</fullName>
        <label>Conferido por</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conferido_por_ass_diretoria__c</fullName>
        <label>Conferido por</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conferido_por_ass_gerente_procurador__c</fullName>
        <label>Conferido por</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conferido_por_ass_procurador__c</fullName>
        <label>Conferido por</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conferido_por_assinatura_alteracao__c</fullName>
        <label>Conferido por</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conferido_por_coordenador__c</fullName>
        <label>Conferido por</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conferido_por_doc_ok__c</fullName>
        <label>Conferido por</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conferido_por_enc_ass__c</fullName>
        <label>Conferido por</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conferido_por_pagamento_1a_parc__c</fullName>
        <label>Conferido por</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultoria_de_Mixologistas_Coment_rio__c</fullName>
        <label>Consultoria de Mixologistas - Comentário</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultoria_de_Mixologistas__c</fullName>
        <inlineHelpText>Somente para High Image</inlineHelpText>
        <label>Consultoria de Mixologistas</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conta_Card_pio__c</fullName>
        <formula>if( ispickval(Cardapio__c, &quot;Sim&quot;)=true,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conta Cardápio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conta_Clausulas__c</fullName>
        <label>Conta Clausulas</label>
        <summaryForeignKey>Cl_usulas_do_Contrato__c.Contrato__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Conta_Exclusividade_Promocional__c</fullName>
        <formula>if( ispickval( Exclusiv_promoc_Champagne__c , &quot;Sim&quot;)=true,1,
if( ispickval( Exclusiv_promoc_Espumantes__c , &quot;Sim&quot;)=true,1,
if( ispickval(  Exclusiv_promoc_Rum_Importado__c  , &quot;Sim&quot;)=true,1,
if( ispickval(  Exclusiv_promoc_Rum_Nacional__c  , &quot;Sim&quot;)=true,1,
if( ispickval(  Exclusiv_promoc_Tequila__c  , &quot;Sim&quot;)=true,1,
if( ispickval(  Exclusiv_promoc_Tequila_super_premium__c  , &quot;Sim&quot;)=true,1,
if( ispickval(  Exclusiv_promoc_Vinhos__c  , &quot;Sim&quot;)=true,1,
if( ispickval(  Exclusiv_promoc_Vodkas_Importadas__c  , &quot;Sim&quot;)=true,1,
if( ispickval(  Exclusiv_promoc_Vodkas_Nacionais__c  , &quot;Sim&quot;)=true,1,
if( ispickval(  Exclusiv_promoc_Vodka_Super_Premium__c  , &quot;Sim&quot;)=true,1,
if( ispickval(  Exclusiv_promoc_Whiskie_Bourbon__c  , &quot;Sim&quot;)=true,1,
if( ispickval(  Exclusiv_promoc_Whiskie_Irlandes__c  , &quot;Sim&quot;)=true,1,
if( ispickval(  Exclusiv_promoc_Whisky_12_anos__c  , &quot;Sim&quot;)=true,1,
if( ispickval(  Exclusiv_promoc_Whisky_Engarrafado__c  , &quot;Sim&quot;)=true,1,
if( ispickval(  Exclusiv_promoc_Whisky_Nacional__c  , &quot;Sim&quot;)=true,1,
if( ispickval(  Exclusiv_promoc_Whisky_Std__c  , &quot;Sim&quot;)=true,1,
if( ispickval(  Exclusiv_promoc_Whisky_Super_Premium__c  , &quot;Sim&quot;)=true,1,

0)))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conta Exclusividade Promocional</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conta_Prioridade_de_Venda__c</fullName>
        <formula>if( ispickval(  Prioridade_venda_Champagne__c  , &quot;Sim&quot;)=true,1,
if( ispickval( Prioridade_venda_Espumantes__c  , &quot;Sim&quot;)=true,1,
if( ispickval(  Prioridade_venda_Rum_Importado__c  , &quot;Sim&quot;)=true,1,
if( ispickval(  Prioridade_venda_Rum_Nacional__c  , &quot;Sim&quot;)=true,1,
if( ispickval(  Prioridade_venda_Tequila_Std__c  , &quot;Sim&quot;)=true,1,
if( ispickval(  Prioridade_venda_Tequila_S_Premium__c  , &quot;Sim&quot;)=true,1,
if( ispickval(  Prioridade_venda_Vinhos__c  , &quot;Sim&quot;)=true,1,
if( ispickval(  Prioridade_venda_Vodkas_Importadas__c  , &quot;Sim&quot;)=true,1,
if( ispickval(  Prioridade_venda_Vodkas_Nacionais__c  , &quot;Sim&quot;)=true,1,
if( ispickval( Prioridade_venda_Vodka_Super_Premium__c , &quot;Sim&quot;)=true,1,
if( ispickval(  Prioridade_venda_Whiskie_Americano__c   , &quot;Sim&quot;)=true,1,
if( ispickval(  Prioridade_venda_Whiskie_Irlandes__c  , &quot;Sim&quot;)=true,1,
if( ispickval(  Prioridade_venda_Whisky_12_anos__c  , &quot;Sim&quot;)=true,1,
if( ispickval(  Prioridade_venda_Whisky_Engarrafado__c  , &quot;Sim&quot;)=true,1,
if( ispickval(  Prioridade_venda_Whisky_Nacional__c  , &quot;Sim&quot;)=true,1,
if( ispickval(  Prioridade_venda_Whisky_Std__c  , &quot;Sim&quot;)=true,1,
if( ispickval(  Prioridade_venda_Whisky_Super_Premium__c  , &quot;Sim&quot;)=true,1,

0)))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conta Prioridade de Venda</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conta_Tailor_Made__c</fullName>
        <formula>if( ispickval( Tailor_made__c , &quot;Sim&quot;)=true,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conta Tailor Made</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conta_Visibilidade__c</fullName>
        <formula>if( ispickval( Visibilidade_do_produto__c , &quot;Sim&quot;)=true,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conta Visibilidade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conta_corrente__c</fullName>
        <label>Conta corrente</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conta_cr_dito__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Conta crédito</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conta_d_bito__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Conta débito</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conta_erro_clausula__c</fullName>
        <label>Conta erro clausula</label>
        <summaryFilterItems>
            <field>Cl_usulas_do_Contrato__c.Distribuicao_OK__c</field>
            <operation>equals</operation>
            <value>ERRO DE DISTRIBUIÇÃO</value>
        </summaryFilterItems>
        <summaryForeignKey>Cl_usulas_do_Contrato__c.Contrato__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Conta_tipo_de_dpocumento__c</fullName>
        <label>Conta tipo de documento</label>
        <summaryForeignKey>Tipo_de_Documento__c.LAT_Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contato_Primeiro_Nome__c</fullName>
        <formula>CustomerSigned__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contato Primeiro Nome</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contato_Sobrenome__c</fullName>
        <formula>CustomerSigned__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contato Sobrenome</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractNumber__c</fullName>
        <displayFormat>{00000000}</displayFormat>
        <label>Contract Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ContractTerm__c</fullName>
        <label>Contract Term (months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contrapartidas_concorrencia__c</fullName>
        <label>Contrapartidas concorrência</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contrato_original__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contrato original</label>
        <referenceTo>LAT_Contract__c</referenceTo>
        <relationshipLabel>Aditamentos</relationshipLabel>
        <relationshipName>Aditamentos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contrato_por__c</fullName>
        <label>Contrato por</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bandeira</fullName>
                </value>
                <value>
                    <fullName>Organização</fullName>
                </value>
                <value>
                    <fullName>AN8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custo_Pernod__c</fullName>
        <formula>ROI_TInvestment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custo PRB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custo_Pernod_old__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Custo Pernod</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CustomerSignedDate__c</fullName>
        <label>Customer Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustomerSignedId__c</fullName>
        <displayFormat>{00000000}</displayFormat>
        <label>CustomerSignedId</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CustomerSignedTitle__c</fullName>
        <label>Customer Signed Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerSigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Signed By</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>LAT_Contracts</relationshipLabel>
        <relationshipName>LAT_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contract Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( TEXT(MONTH( StartDate__c ))) = 0, &quot;Contract Start Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(  TEXT(ContractTerm__c)) = 0, &quot;Contract Term, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( BillingCity__c ) = 0, &quot;Complete Contract Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( CustomerSignedId__c ) = 0, &quot;Customer Signature, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(  OwnerExpirationNotice__c ,&quot;&quot;), &quot;Owner Expiration Notice&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
</CustomObject>